--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLGmx8E7a54VjKw1pnN-3u3TYw5rjDQno" ></script>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,4 +38,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
+  
 </html>
